# HIPAA-compliant-patient-document-search-system

./: AGENTS.md  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
config/: roles.yaml  settings.yaml
sample_data/: PT-0001_discharge_note.txt
src/: __init__.py  audit.py  cli.py  ingest.py  lint.py  llm.py  ocr.py  query.py  rbac.py
tests/: test_audit.py  test_ingest.py  test_rbac.py
